# OBC-MDRS-RPI

./: .gitignore  README.md  launch.bash
rpi_MDRS/include/roboclaw_python/: roboclaw_wrapper.py
sim_MDRS/: CMakeLists.txt  __depr_setup.py  package.xml  setup.cfg
sim_MDRS/config/: robot_config.yaml
sim_MDRS/launch/: mdrs.launch.py  rviz.launch.py
sim_MDRS/sim_MDRS/: robot_node.py
sim_MDRS/urdf/: gazebo.urdf.xacro  osr.urdf.xacro
src/remote_control/: comms.dbc  incoming_messages.cpp  remote_messages.py  roboclaw_driver.py  roboclaw_test.py
src/roboclaw/: go_forth.py  roboclaw_test.py  roboclaw_test_all.py
src/roboclaw_node/: CMakeLists.txt  package.xml  setup.py
src/roboclaw_node/launch/: aggregator.py  roboclaw_launch.py
src/roboclaw_node/nodes/: roboclaw_node.py
src/roboticArm/: WheelControl1.py  calibrate_servos.py  calibrate_servos_new.py  gripper.py  jointangle_to_motor.py  servo_testing.py
src/rpi_MDRS/: CMakeLists.txt  __depr_setup.py  package.xml  setup.cfg  setup.py
src/rpi_MDRS/Docker/: Dockerfile  docker-compose.yml  docker_clean.sh
src/rpi_MDRS/Docker/.devcontainer/: devcontainer.json
src/rpi_MDRS/config/: dependencies.yaml  robot_config.yaml
src/rpi_MDRS/launch/: mdrs.launch.py  rviz.launch.py
src/rpi_MDRS/src/: diff_controller.cpp
src/rpi_MDRS/urdf/: gazebo.urdf.xacro  osr.urdf.xacro
src/sim_mdrs/: CMakeLists.txt  __depr_setup.py  package.xml  setup.cfg  setup.py
src/sim_mdrs/config/: arm_control.yaml  controller_velocity.yaml  dependencies.yaml  robot_config.yaml
src/sim_mdrs/launch/: arm_rviz.launch.py  mdrs.launch.py  mdrs_complete.launch.py  mdrs_remote.launch.py  roboclaw_testing.launch.py  robotic_arm.launch.py  robotic_arm_remote.launch.py  rviz.launch.py
src/sim_mdrs/sim_MDRS/: MoveArm.msg  keyboard_arm.py  keyboard_control.py  remote_arm.py  remote_branch.py  remote_messages.py
src/sim_mdrs/sim_mdrs/: diff_controller.py  gripper.py  jointangle_to_motor.py  keyboard_control.py  remote_arm.py  remote_branch.py  remote_messages.py  remote_test.py  remote_with_exceptions.py  roboclaw_node.py
src/sim_mdrs/src/: diff_controller.cpp
src/sim_mdrs/urdf/: arm.urdf  arm.urdf.xacro  arm_control.urdf.xacro  arm_gazebo.urdf.xacro  arm_rviz.urdf.xacro  gazebo.urdf.xacro  insert_transmission.urdf.xacro  osr.urdf.xacro
src/sim_mdrs/urdf/arm_meshes/: B1.stl  arm_inf.stl  arm_sup.stl
src/sim_mdrs/urdf/meshes/arm_meshes/: Assembly Base.iam  B1 fermeture.ipt  B1 fermeture.stl  B1 fixe2.ipt  B1 fixe2.stl  B1.ipt  B2.ipt  B2.stl  Porte_moteur.stl  inferior arm.ipt  jonction pliers.ipt  jonction pliers.stl  superior arm.ipt
src/sim_mdrs/urdf/meshes/arm_meshes/components/: Battery Lipo.ipt  adaptator_25.ipt  adaptator_35.ipt  arduino.ipt  bearings base.ipt  camera.ipt  motor.ipt  motor_25kg.iam  motor_25kg.ipt  motor_35kg.iam  motor_35kg.ipt  motor_adaptator.ipt  motor_assembly.iam  processor.newVer.ipt  rasberry pi.ipt
src/sim_mdrs/urdf/meshes/arm_meshes/components/OldVersions/: adaptator_25.0002.ipt  motor.0002.ipt  motor_25kg.0002.iam  motor_25kg.0002.ipt  motor_35kg.0001.iam  motor_35kg.0005.ipt  motor_adaptator.0002.ipt  motor_assembly.0003.iam  processor.0002.ipt
src/testing/: ina.py  robo_test.py  roboclaw_driver.py
