<?xml version="1.0"?>
<package format="3">
  <name>roboclaw_node</name>
  <version>0.0.1</version>
  <description>Node for roboclaw</description>

  <maintainer email="bwbazemore@uga.edu">Brad Bazemore</maintainer>
  <license>BSD</license>

  <author email="bwbazemore@uga.edu">Brad Bazemore</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>