<?xml version="1.0"?>
<package format="3">
  <name>sim_mdrs</name>
  <version>0.0.0</version>
  <description>Test</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Add runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>python3-colcon-common-extensions</depend>
  <depend>ros-humble-rviz2</depend>
  <depend>ros-humble-controller-manager</depend>
  <depend>ros-humble-robot-state-publisher</depend>
  <depend>ros-humble-joint-state-publisher</depend>
  <depend>ros-humble-joint-state-publisher-gui</depend>
  <depend>ros-humble-gazebo-ros-pkgs</depend>
  <depend>ros-humble-trajectory-msgs</depend>
  <depend>ros-humble-velocity-controllers</depend>
  <depend>ros-humble-joint-trajectory-controller</depend>
  <depend>ros-humble-gazebo-ros2-control-demos</depend>
  <depend>ros-humble-teleop-tools </depend>
  <depend>ros-humble-key-teleop</depend>
  <depend>ros-humble-tf-transformations</depend>
  <depend>ros-humble-ros2-controllers</depend>
  <depend>ros-humble-xacro</depend>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Add test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
